# segtok

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  about.md
benches/: bench.rs
src/: lib.rs  regex.rs
src/segmenter/: abbreviations.rs  continuations.rs  mod.rs  ospl.txt  unix_linebreaks.rs
src/tokenizer/: contractions.rs  mod.rs  possessive_markers.rs  space_tokenizer.rs  symbol_tokenizer.rs  web_tokenizer.rs  word_tokenizer.rs
tests/: google.rs  sanity.rs  simple.rs  test_business.txt  test_google_reference.json  test_turkish_reference.json
