[package]
name = "segtok"
version = "0.1.3"
edition = "2021"
resolver = "2"

# https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Florian Leitner", "Igor Strebz"]
categories = ["text-processing"]
description = "Sentence segmentation and word tokenization tools"
keywords = ["tokenizer", "segmenter", "word", "split"]
license = "MIT"
repository = "https://github.com/xamgore/segtok"

[dependencies]
fancy-regex = "0.14.0"
itertools = "0.14.0"
htmlize = { version = "1.0.5", features = ["unescape_fast"] }

[dev-dependencies]
serde = "1.0.217"
serde_json = "1.0.137"
